media querries dans les fichiers (pb couleur navigateur)

--- a/css/styles.css
+++ b/css/styles.css
@@ -84,6 +84,14 @@
   padding-bottom: 12px;
 }
 
+@media all and (min-width: 500px) {
+  .explorer-restos__title {
+    font-size: 40px;
+  }
+  .explorer-restos__subtitle {
+    font-size: 20px;
+  }
+}
 .load {
   width: 100%;
   height: 100%;
@@ -157,6 +165,29 @@
   font-weight: normal;
 }
 
+@media all and (min-width: 500px) {
+  .list-resto h3 {
+    font-size: 26px;
+  }
+  .list-resto .restaurant__article {
+    margin-bottom: 28px;
+  }
+  .list-resto .restaurant__cards .nouveau {
+    font-size: 17px;
+  }
+  .list-resto .restaurant__photo {
+    height: 200px;
+  }
+  .list-resto .restaurant__nom {
+    padding: 16px;
+  }
+  .list-resto .restaurant h4 {
+    font-size: 18px;
+  }
+  .list-resto .restaurant h5 {
+    font-size: 18px;
+  }
+}
 .cards-menu--entree-1 {
   animation: apparition 2s both;
   animation-delay: 1s;
@@ -216,6 +247,12 @@
 .cards-menu:hover h5 {
   animation: prix 0.55s;
   animation-fill-mode: both;
+}
+@media all and (min-width: 500px) {
+  .cards-menu:hover h5 .cards-menu:hover h5 {
+    animation: prix-tablette 0.55s;
+    animation-fill-mode: both;
+  }
 }
 
 body {
@@ -296,6 +333,26 @@ a:hover {
   font-size: 14px;
 }
 
+@media all and (min-width: 500px) {
+  .explication {
+    padding: 26px 24px;
+    margin-bottom: 24px;
+    border-radius: 16px;
+    border: none;
+    width: 87%;
+    gap: 20px;
+  }
+  .explication__number {
+    padding: 4px 9px 3px 9px;
+    font-size: 15px;
+  }
+  .explication__icon {
+    font-size: 20px;
+  }
+  .explication__text {
+    font-size: 17px;
+  }
+}
 .formulaire {
   display: flex;
   flex-direction: column;
@@ -316,6 +373,17 @@ a:hover {
   font-size: 16px;
 }
 
+@media all and (min-width: 500px) {
+  .fa-location-dot {
+    font-size: 20px;
+  }
+  .recherche {
+    padding: 18px;
+  }
+  .recherche__adresse {
+    font-size: 18px;
+  }
+}
 .border-heart {
   position: absolute;
   background-color: initial;
@@ -362,6 +430,16 @@ a:hover {
   margin-top: 2rem;
 }
 
+@media all and (min-width: 500px) {
+  .heart {
+    left: 85%;
+    font-size: 28px;
+  }
+  .heart--titre {
+    margin-top: 2.4rem;
+    font-size: 30px;
+  }
+}
 .btn-explorez {
   border: none;
   font-family: "roboto";
@@ -377,6 +455,14 @@ a:hover {
   margin-right: auto;
   margin-left: auto;
   display: block;
+}
+@media all and (min-width: 500px) {
+  .btn-explorez .btn-explorez {
+    font-size: 17px;
+    border-radius: 35px;
+    width: 254px;
+    padding: 20px;
+  }
 }
 .btn-explorez:hover {
   box-shadow: rgba(40, 40, 40, 0.5019607843) 0px 5px 9px;
@@ -396,6 +482,13 @@ a:hover {
   box-shadow: rgba(116, 116, 116, 0.5019607843) 0px 5px 9px;
   margin: 30px auto;
   display: block;
+}
+@media all and (min-width: 500px) {
+  .commander .commander {
+    font-size: 20px;
+    border-radius: 34px;
+    padding: 20px;
+  }
 }
 .commander:hover {
   box-shadow: rgba(40, 40, 40, 0.5019607843) 0px 5px 9px;
@@ -525,63 +618,6 @@ a:hover {
   font-size: 20px;
 }
 
-.header-title {
-  font-family: shrikhand;
-  text-align: center;
-  margin-top: 12px;
-  margin-bottom: 6px;
-  font-weight: 500;
-}
-
-.header-return {
-  font-size: 20px;
-  top: 1.3rem;
-  left: 1rem;
-  position: absolute;
-  border: none;
-  background: initial;
-}
-.header-return__arrow-left {
-  color: #464646;
-}
-.header-return__arrow-left:hover {
-  color: #ff79da;
-}
-
-.footer {
-  background-color: #464646;
-  padding: 14px;
-}
-.footer__title {
-  font-family: shrikhand;
-  color: white;
-  font-size: 16px;
-  margin: 0px;
-  padding-bottom: 18px;
-  font-weight: normal;
-}
-
-.menu-footer {
-  list-style-type: none;
-  padding-left: 0px;
-  margin: 0px;
-}
-.menu-footer__link {
-  color: #fff;
-  font-size: 14px;
-}
-.menu-footer__link--icon a {
-  display: flex;
-  gap: 8px;
-  align-items: center;
-}
-.menu-footer__link--icon .fa-utensils {
-  font-size: 16px;
-}
-.menu-footer__link--icon .fa-handshake-angle {
-  font-size: 11px;
-}
-
 @media all and (min-width: 500px) {
   .image-restaurant {
     height: 368px;
@@ -619,75 +655,31 @@ a:hover {
   .validation-plat__icon {
     font-size: 26px;
   }
-  .explorer-restos__title {
-    font-size: 40px;
-  }
-  .explorer-restos__subtitle {
-    font-size: 20px;
-  }
-  .cards-menu:hover h5 {
-    animation: prix-tablette 0.55s;
-    animation-fill-mode: both;
-  }
-  .commander {
-    font-size: 20px;
-    border-radius: 34px;
-    padding: 20px;
-  }
-  .btn-explorez {
-    font-size: 17px;
-    border-radius: 35px;
-    width: 254px;
-    padding: 20px;
-  }
-  .fa-location-dot {
-    font-size: 20px;
-  }
-  .recherche {
-    padding: 18px;
-  }
-  .recherche__adresse {
-    font-size: 18px;
-  }
-  .explication {
-    padding: 26px 24px;
-    margin-bottom: 24px;
-    border-radius: 16px;
-    border: none;
-    width: 87%;
-    gap: 20px;
-  }
-  .explication__number {
-    padding: 4px 9px 3px 9px;
-    font-size: 15px;
-  }
-  .explication__icon {
-    font-size: 20px;
-  }
-  .explication__text {
-    font-size: 17px;
-  }
-  .list-resto h3 {
-    font-size: 26px;
-  }
-  .list-resto .restaurant__article {
-    margin-bottom: 28px;
-  }
-  .list-resto .restaurant__cards .nouveau {
-    font-size: 17px;
-  }
-  .list-resto .restaurant__photo {
-    height: 200px;
-  }
-  .list-resto .restaurant__nom {
-    padding: 16px;
-  }
-  .list-resto .restaurant h4 {
-    font-size: 18px;
-  }
-  .list-resto .restaurant h5 {
-    font-size: 18px;
-  }
+}
+.header-title {
+  font-family: shrikhand;
+  text-align: center;
+  margin-top: 12px;
+  margin-bottom: 6px;
+  font-weight: 500;
+}
+
+.header-return {
+  font-size: 20px;
+  top: 1.3rem;
+  left: 1rem;
+  position: absolute;
+  border: none;
+  background: initial;
+}
+.header-return__arrow-left {
+  color: #464646;
+}
+.header-return__arrow-left:hover {
+  color: #ff79da;
+}
+
+@media all and (min-width: 500px) {
   .header-title {
     margin-top: 24px;
     margin-bottom: 6px;
@@ -698,6 +690,42 @@ a:hover {
     top: 2.5rem;
     left: 2rem;
   }
+}
+.footer {
+  background-color: #464646;
+  padding: 14px;
+}
+.footer__title {
+  font-family: shrikhand;
+  color: white;
+  font-size: 16px;
+  margin: 0px;
+  padding-bottom: 18px;
+  font-weight: normal;
+}
+
+.menu-footer {
+  list-style-type: none;
+  padding-left: 0px;
+  margin: 0px;
+}
+.menu-footer__link {
+  color: #fff;
+  font-size: 14px;
+}
+.menu-footer__link--icon a {
+  display: flex;
+  gap: 8px;
+  align-items: center;
+}
+.menu-footer__link--icon .fa-utensils {
+  font-size: 16px;
+}
+.menu-footer__link--icon .fa-handshake-angle {
+  font-size: 11px;
+}
+
+@media all and (min-width: 500px) {
   .footer__title {
     font-size: 20px;
     padding-bottom: 18px;
@@ -709,14 +737,6 @@ a:hover {
   }
   .menu-footer__link {
     font-size: 17px;
-  }
-  .heart {
-    left: 85%;
-    font-size: 28px;
-  }
-  .heart--titre {
-    margin-top: 2.4rem;
-    font-size: 30px;
   }
 }
 @media all and (min-width: 1001px) {
@@ -745,6 +765,27 @@ a:hover {
   }
   .explication__number--3 {
     left: 67%;
+  }
+  .list-resto h3 {
+    font-size: 26px;
+  }
+  .list-resto .restaurant__article {
+    margin-bottom: 28px;
+  }
+  .list-resto .restaurant__cards .nouveau {
+    font-size: 17px;
+  }
+  .list-resto .restaurant__photo {
+    height: 200px;
+  }
+  .list-resto .restaurant__nom {
+    padding: 16px;
+  }
+  .list-resto .restaurant h4 {
+    font-size: 18px;
+  }
+  .list-resto .restaurant h5 {
+    font-size: 18px;
   }
 }
 
