--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -19,5 +19,5 @@
 
 //*responsible*//
 //*mobile jusqu'à 499px*//
-@import "./tablette/main_tablette.scss"; //*à partir 500px*//
+//*tablette à partir 500px*//
 @import "./deskop/main_deskop.scss"; //*à partir de 1001px*//
