--- a/sass/components/_recherche_accueil.scss
+++ b/sass/components/_recherche_accueil.scss
@@ -19,3 +19,16 @@
         }
     }
 }
+
+@media all and (min-width: 500px) {
+    .fa-location-dot {
+        font-size: nth($list: $size, $n: 5);
+    }
+    .recherche {
+        padding: nth($list: $padding, $n: 6);
+
+        &__adresse {
+            font-size: nth($list: $size, $n: 7);
+        }
+    }
+}
