--- a/sass/layout/_icon_heart.scss
+++ b/sass/layout/_icon_heart.scss
@@ -41,3 +41,16 @@
     margin-top: 2rem;
   }
 }
+
+
+@media all and (min-width: 500px) {
+  .heart {
+    left: 85%;
+    font-size: 28px;
+
+    &--titre {
+        margin-top: 2.4rem;
+        font-size: 30px;
+    }
+  }
+}
