--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -11,7 +11,7 @@ $marge-centrer: auto;
 
 $margin: 0px 20px 24px 14px 38px 12px 30px 60px 40px;
 $padding: 0px 14px 20px 10px 16px 18px 25px 13px 30px;
-$size: 11px 14px 16px 17px 20px 26px 18px 12px 40px;
+$size: 11px 14px 16px 17px 20px 26px 18px 12px 40px 30px;
 $width: 254px 38px 100% 87% 206px 78% 60px 324px;
 $height: 200px 368px 100% 144px 230px;
 
