--- a/sass/components/_list_resto.scss
+++ b/sass/components/_list_resto.scss
@@ -66,3 +66,43 @@
         }
     }
 }
+
+@media all and (min-width: 500px) {
+    .list-resto {
+
+        & h3 {
+            font-size: nth($list: $size, $n: 6);
+        }
+    
+        .restaurant {
+    
+            &__article {
+                margin-bottom: 28px;
+            }
+    
+            &__cards {
+    
+                .nouveau {
+                    font-size: nth($list: $size, $n: 4);
+                }
+            }
+    
+            &__photo {
+                height: nth($list: $height, $n: 1);
+            }
+    
+            &__nom {
+                padding: nth($list: $padding, $n: 5);
+    
+            }
+    
+            & h4 {
+                font-size: nth($list: $size, $n: 7);            
+            }
+    
+            & h5{
+                font-size: nth($list: $size, $n: 7);
+            }
+        }
+    }
+}
