--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -27,4 +27,20 @@
 }
 
 
+@media all and (min-width: 500px) {
+    .header-title {
+        margin-top: nth($list: $margin, $n: 3);
+        margin-bottom: 6px;
+        font-size: nth($list: $size, $n: 9);
+    
+    }
+    
+    .header-return {
+        font-size: nth($list: $size, $n: 5);
+        top: 2.5rem;
+        left: 2rem;    
+       
+    }
+}
+
     
