--- a/css/styles.css
+++ b/css/styles.css
@@ -11,10 +11,6 @@
     transform: translate(0px, 10px);
     opacity: 0;
   }
-  50% {
-    transform: translate(0px, 5px);
-    opacity: 0.1;
-  }
   100% {
     transform: translate(0px, 0px);
     visibility: visible;
@@ -53,7 +49,7 @@
     transform: translate(0px, 0px);
   }
   to {
-    transform: translate(-66px, 0px);
+    transform: translate(-75px, 0px);
   }
 }
 @keyframes load {
@@ -84,9 +80,12 @@
   padding-bottom: 12px;
 }
 
-@media all and (min-width: 500px) {
+@media all and (min-width: 768px) {
+  .explorer-restos {
+    margin-bottom: 40px;
+  }
   .explorer-restos__title {
-    font-size: 40px;
+    font-size: 30px;
   }
   .explorer-restos__subtitle {
     font-size: 20px;
@@ -115,77 +114,115 @@
 .list-resto h3 {
   font-size: 21px;
 }
-.list-resto .restaurant {
+
+.restaurant {
   display: flex;
   flex-direction: column;
 }
-.list-resto .restaurant__article {
+.restaurant__article {
   width: 100%;
   margin-bottom: 20px;
 }
-.list-resto .restaurant__cards {
+.restaurant__cards {
   margin: 0px;
   background-color: #fff;
   border-radius: 20px;
   box-shadow: rgba(116, 116, 116, 0.5019607843) 0px 5px 9px;
 }
-.list-resto .restaurant__cards:hover {
+.restaurant__cards:hover {
   box-shadow: rgba(40, 40, 40, 0.5019607843) 0px 5px 9px;
 }
-.list-resto .restaurant__cards .nouveau {
+.restaurant__cards .nouveau {
   font-weight: 600;
   font-size: 14px;
   color: #2c9c81;
   position: absolute;
-  right: 10%;
+  right: 9%;
   background: #8af7dd;
   border: 2px #8af7dd solid;
   padding: 7px;
 }
-.list-resto .restaurant__photo {
+.restaurant__photo {
   object-fit: cover;
   height: 144px;
   width: 100%;
   border-radius: 20px 20px 0px 0px;
 }
-.list-resto .restaurant__nom {
+.restaurant__nom {
   display: flex;
   flex-direction: column;
   gap: 3px;
-  padding: 13px;
+  padding: 10px;
   color: black;
 }
-.list-resto .restaurant h4 {
+.restaurant h4 {
   margin: 0px;
   font-weight: 700;
 }
-.list-resto .restaurant h5 {
+.restaurant h5 {
   margin: 0px;
   font-size: 14px;
   font-weight: normal;
 }
 
-@media all and (min-width: 500px) {
+@media all and (min-width: 768px) {
+  .list-resto {
+    flex-direction: row;
+    justify-content: space-between;
+  }
   .list-resto h3 {
-    font-size: 26px;
+    font-size: 28px;
   }
-  .list-resto .restaurant__article {
+  .restaurant {
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .restaurant__article {
     margin-bottom: 28px;
+    width: 48%;
   }
-  .list-resto .restaurant__cards .nouveau {
+  .restaurant .nouveau {
     font-size: 17px;
   }
-  .list-resto .restaurant__photo {
+  .restaurant .nouveau--1 {
+    right: 54%;
+  }
+  .restaurant .nouveau--2 {
+    right: 4%;
+  }
+  .restaurant__photo {
     height: 200px;
   }
-  .list-resto .restaurant__nom {
-    padding: 16px;
+  .restaurant__nom {
+    padding-left: 16px;
   }
-  .list-resto .restaurant h4 {
+  .restaurant h4 {
     font-size: 18px;
   }
-  .list-resto .restaurant h5 {
+  .restaurant h5 {
     font-size: 18px;
+  }
+}
+@media all and (min-width: 992px) {
+  .list-resto {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .list-resto h3 {
+    font-size: 28px;
+  }
+  .restaurant__article {
+    width: 24%;
+  }
+  .restaurant .nouveau--1 {
+    right: 76%;
+  }
+  .restaurant .nouveau--2 {
+    right: 51.5%;
+  }
+  .restaurant__photo {
+    height: 236px;
   }
 }
 .cards-menu--entree-1 {
@@ -199,6 +236,10 @@
 .cards-menu--entree-3 {
   animation: apparition 2s both;
   animation-delay: 3s;
+}
+.cards-menu--entree-4 {
+  animation: apparition 2s both;
+  animation-delay: 4s;
 }
 .cards-menu--plat-1 {
   animation: apparition 2s both;
@@ -214,15 +255,15 @@
 }
 .cards-menu--dessert-1 {
   animation: apparition 2s both;
-  animation-delay: 11s;
+  animation-delay: 10s;
 }
 .cards-menu--dessert-2 {
   animation: apparition 2s both;
-  animation-delay: 12s;
+  animation-delay: 11s;
 }
 .cards-menu--dessert-3 {
   animation: apparition 2s both;
-  animation-delay: 13s;
+  animation-delay: 12s;
 }
 
 .titre-section--entree {
@@ -234,7 +275,7 @@
 }
 .titre-section--dessert {
   animation: apparition 2s both;
-  animation-delay: 10s;
+  animation-delay: 9s;
 }
 
 .validation-plat {
@@ -244,17 +285,17 @@
   animation: check 900ms;
 }
 
-.cards-menu:hover h5 {
+.cards-menu:hover h6 {
   animation: prix 0.55s;
   animation-fill-mode: both;
 }
-@media all and (min-width: 500px) {
-  .cards-menu:hover h5 .cards-menu:hover h5 {
-    animation: prix-tablette 0.55s;
+
+@media all and (min-width: 768px) {
+  .cards-menu:hover h6 {
+    animation: prix-tablette 0.7s;
     animation-fill-mode: both;
   }
 }
-
 body {
   margin: 0px;
   font-family: roboto;
@@ -275,7 +316,9 @@ a:hover {
   justify-content: space-around;
   flex-wrap: wrap;
   padding-left: 20px;
+  padding-right: 20px;
   margin-bottom: 20px;
+  margin-right: 46px;
 }
 .fonctionnement__title {
   font-weight: 700;
@@ -302,11 +345,11 @@ a:hover {
   margin-bottom: 24px;
   border-radius: 16px;
   border: none;
-  width: 78%;
   display: flex;
   flex-direction: row;
   align-items: center;
   gap: 20px;
+  width: 100%;
 }
 .explication--3 {
   background: #f2eafb;
@@ -317,7 +360,7 @@ a:hover {
   border-radius: 25px;
   margin: 0px;
   position: absolute;
-  left: 15px;
+  left: 2.5%;
   font-size: 12px;
   background: #9356dc;
   color: #fff;
@@ -333,24 +376,64 @@ a:hover {
   font-size: 14px;
 }
 
-@media all and (min-width: 500px) {
+@media all and (min-width: 768px) {
   .explication {
     padding: 26px 24px;
     margin-bottom: 24px;
     border-radius: 16px;
     border: none;
-    width: 87%;
     gap: 20px;
   }
   .explication__number {
     padding: 4px 9px 3px 9px;
     font-size: 15px;
+    margin-left: -6%;
+    left: initial;
   }
   .explication__icon {
     font-size: 20px;
   }
   .explication__text {
     font-size: 17px;
+  }
+  .fonctionnement {
+    flex-direction: row;
+    margin-right: 0px;
+  }
+  .fonctionnement__titre {
+    font-size: 28px;
+  }
+}
+@media all and (min-width: 992px) {
+  .fonctionnement {
+    flex-direction: column;
+  }
+  .fonctionnement__title {
+    text-align: center;
+    font-size: 30px;
+  }
+  .fonctionnement__site ul {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .explication {
+    width: 26%;
+  }
+  .explication__number {
+    margin-left: -4%;
+    font-size: 16px;
+  }
+}
+@media all and (min-width: 1300px) {
+  .explication__number {
+    margin-left: -3%;
+  }
+}
+@media all and (min-width: 1500px) {
+  .explication__number {
+    margin-left: -2.7%;
   }
 }
 .formulaire {
@@ -373,7 +456,7 @@ a:hover {
   font-size: 16px;
 }
 
-@media all and (min-width: 500px) {
+@media all and (min-width: 768px) {
   .fa-location-dot {
     font-size: 20px;
   }
@@ -419,25 +502,62 @@ a:hover {
 .heart {
   font-size: 26px;
   position: absolute;
-  left: 78%;
-  margin-top: -4rem;
+  margin-left: 75%;
+  margin-top: -3rem;
   border: none;
   background: initial;
   cursor: pointer;
 }
 .heart--titre {
-  left: 84%;
+  left: 11%;
   margin-top: 2rem;
 }
 
-@media all and (min-width: 500px) {
+@media all and (min-width: 768px) {
   .heart {
-    left: 85%;
+    left: 89%;
     font-size: 28px;
+    margin-top: -4rem;
+  }
+  .heart--1 {
+    left: 16%;
+  }
+  .heart--2 {
+    left: -33%;
+  }
+  .heart--3 {
+    left: 16%;
+  }
+  .heart--4 {
+    left: -33%;
   }
   .heart--titre {
     margin-top: 2.4rem;
     font-size: 30px;
+    left: 16%;
+  }
+}
+@media all and (min-width: 992px) {
+  .heart {
+    margin-top: -3.7rem;
+    font-size: 24px;
+  }
+  .heart--titre {
+    margin-top: 2.5rem;
+    font-size: 33px;
+    left: 0%;
+  }
+  .heart--1 {
+    left: -54%;
+  }
+  .heart--2 {
+    left: -30%;
+  }
+  .heart--3 {
+    left: -6%;
+  }
+  .heart--4 {
+    left: 19%;
   }
 }
 .btn-explorez {
@@ -455,14 +575,6 @@ a:hover {
   margin-right: auto;
   margin-left: auto;
   display: block;
-}
-@media all and (min-width: 500px) {
-  .btn-explorez .btn-explorez {
-    font-size: 17px;
-    border-radius: 35px;
-    width: 254px;
-    padding: 20px;
-  }
 }
 .btn-explorez:hover {
   box-shadow: rgba(40, 40, 40, 0.5019607843) 0px 5px 9px;
@@ -483,18 +595,24 @@ a:hover {
   margin: 30px auto;
   display: block;
 }
-@media all and (min-width: 500px) {
-  .commander .commander {
-    font-size: 20px;
-    border-radius: 34px;
-    padding: 20px;
-  }
-}
 .commander:hover {
   box-shadow: rgba(40, 40, 40, 0.5019607843) 0px 5px 9px;
   background: linear-gradient(#ff8de0, #9e67e0);
 }
 
+@media all and (min-width: 768px) {
+  .btn-explorez {
+    font-size: 17px;
+    border-radius: 35px;
+    width: 254px;
+    padding: 20px;
+  }
+  .commander {
+    font-size: 20px;
+    border-radius: 34px;
+    padding: 20px;
+  }
+}
 .image-restaurant {
   width: 100%;
   height: 230px;
@@ -502,13 +620,12 @@ a:hover {
 }
 
 .header-form {
-  display: flex;
-  flex-direction: row;
   border-radius: 40px 40px 0px 0px;
   margin-top: -38px;
   background: white;
   position: relative;
   z-index: 2;
+  display: flex;
 }
 .header-form__title {
   font-family: shrikhand;
@@ -525,7 +642,7 @@ a:hover {
 
 .titre-section {
   border-bottom: 4px solid #99e2d0;
-  width: 38px;
+  width: 40px;
   padding-bottom: 6px;
   margin-top: 30px;
   font-size: 16px;
@@ -550,11 +667,11 @@ a:hover {
 .cards-menu:hover {
   box-shadow: rgba(40, 40, 40, 0.5019607843) 0px 0px 20px;
 }
-.cards-menu:hover h3 {
+.cards-menu:hover h4 {
   max-width: 76%;
 }
 .cards-menu:hover .cards-menu__detail {
-  max-width: 65%;
+  max-width: 66%;
 }
 .cards-menu:hover .validation-plat {
   display: block;
@@ -574,7 +691,7 @@ a:hover {
   align-items: flex-end;
   margin: 0px;
 }
-.cards-menu h3 {
+.cards-menu h4 {
   margin: 0px;
   font-size: 15px;
   overflow: hidden;
@@ -589,7 +706,7 @@ a:hover {
 .cards-menu dd {
   margin: 0px;
 }
-.cards-menu h4 {
+.cards-menu h5 {
   margin: 0px;
   font-size: 12px;
   font-weight: 500;
@@ -600,7 +717,7 @@ a:hover {
 .cards-menu .titre-gras {
   font-weight: 700;
 }
-.cards-menu h5 {
+.cards-menu h6 {
   margin: 0px;
   font-size: 15px;
   padding-right: 10px;
@@ -618,7 +735,7 @@ a:hover {
   font-size: 20px;
 }
 
-@media all and (min-width: 500px) {
+@media all and (min-width: 768px) {
   .image-restaurant {
     height: 368px;
   }
@@ -629,31 +746,89 @@ a:hover {
   .titre-section {
     font-size: 25px;
     width: 60px;
+    margin-bottom: 10px;
   }
   .cards-menu {
     padding: 19px 10px;
+    width: 43%;
   }
-  .cards-menu:hover h3 {
-    max-width: 73%;
+  .cards-menu:hover h4 {
+    max-width: 74%;
   }
   .cards-menu:hover .cards-menu__detail {
-    max-width: 70%;
+    max-width: 59%;
   }
   .cards-menu:hover .validation-plat {
     margin-top: -65px;
     padding: 29px 27px;
   }
-  .cards-menu h3 {
-    font-size: 19px;
+  .cards-menu__detail {
+    max-width: 84%;
   }
   .cards-menu h4 {
-    font-size: 16px;
+    font-size: 19px;
   }
   .cards-menu h5 {
+    font-size: 16px;
+  }
+  .cards-menu h6 {
     font-size: 19px;
+  }
+  .flex-article {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
   }
   .validation-plat__icon {
     font-size: 26px;
+  }
+}
+@media all and (min-width: 992px) {
+  .image-restaurant {
+    height: 498px;
+  }
+  .header-form__title {
+    font-size: 40px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .titre-section {
+    font-size: 25px;
+    width: 60px;
+    margin-bottom: 10px;
+  }
+  .cards-menu {
+    width: 28%;
+  }
+  .cards-menu:hover h4 {
+    max-width: 70%;
+  }
+  .cards-menu:hover .cards-menu__detail {
+    max-width: 53%;
+  }
+  .cards-menu__detail {
+    max-width: 80%;
+  }
+  .cards-menu h4 {
+    max-width: 95%;
+  }
+  .flex-article {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  .validation-plat__icon {
+    font-size: 26px;
+  }
+}
+@media all and (min-width: 1130px) {
+  .cards-menu:hover .cards-menu__detail {
+    max-width: 60%;
+  }
+}
+@media all and (min-width: 1364px) {
+  .cards-menu:hover .cards-menu__detail {
+    max-width: 66%;
   }
 }
 .header-title {
@@ -687,7 +862,7 @@ a:hover {
   }
   .header-return {
     font-size: 20px;
-    top: 2.5rem;
+    top: 2rem;
     left: 2rem;
   }
 }
@@ -708,6 +883,8 @@ a:hover {
   list-style-type: none;
   padding-left: 0px;
   margin: 0px;
+  display: flex;
+  flex-direction: column;
 }
 .menu-footer__link {
   color: #fff;
@@ -725,7 +902,7 @@ a:hover {
   font-size: 11px;
 }
 
-@media all and (min-width: 500px) {
+@media all and (min-width: 768px) {
   .footer__title {
     font-size: 20px;
     padding-bottom: 18px;
@@ -734,58 +911,24 @@ a:hover {
   .menu-footer {
     padding-left: 0px;
     margin: 0px;
-  }
-  .menu-footer__link {
-    font-size: 17px;
-  }
-}
-@media all and (min-width: 1001px) {
-  .fonctionnement__titre {
-    font-size: 30px;
-  }
-  .fonctionnement__site {
-    display: block;
-  }
-  .fonctionnement__site ul {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-around;
   }
-  .explication {
-    width: 24%;
+  .menu-footer__link {
+    font-size: 16px;
+    width: 50%;
+    padding-bottom: 10px;
   }
-  .explication--3 {
-    background: #f2eafb;
-  }
-  .explication__number--1 {
-    left: 2%;
-  }
-  .explication__number--2 {
-    left: 35%;
-  }
-  .explication__number--3 {
-    left: 67%;
-  }
-  .list-resto h3 {
+}
+@media all and (min-width: 992px) {
+  .footer__title {
     font-size: 26px;
+    text-align: center;
   }
-  .list-resto .restaurant__article {
-    margin-bottom: 28px;
-  }
-  .list-resto .restaurant__cards .nouveau {
-    font-size: 17px;
-  }
-  .list-resto .restaurant__photo {
-    height: 200px;
-  }
-  .list-resto .restaurant__nom {
-    padding: 16px;
-  }
-  .list-resto .restaurant h4 {
-    font-size: 18px;
-  }
-  .list-resto .restaurant h5 {
-    font-size: 18px;
+  .menu-footer__link {
+    width: initial;
   }
 }
 
