--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -6,18 +6,18 @@
 @import "./components/form_accueil.scss";
 @import "./components/load_spinner";
 @import "./components/list_resto.scss";
-@import "./components/animation_mobile.scss";
+@import "./components/animation.scss";
 @import "./components/ancre_body.scss";
 @import "./components/explication_fonctionnement.scss";
 @import "./components/recherche_accueil.scss";
 @import "./layout/icon_heart.scss";
-@import "./components/btn_mobile.scss";
-@import "./components/choix_plats_mobile.scss";
+@import "./components/btn.scss";
+@import "./components/choix_plats.scss";
 
 @import "./layout/header.scss";
 @import "./layout/footer.scss";
 
 //*responsible*//
-//*mobile jusqu'à 499px*//
-//*tablette à partir 500px*//
-@import "./deskop/main_deskop.scss"; //*à partir de 1001px*//
+//*mobile jusqu'à 767px*//
+//*tablette à partir 768px*//
+//*deskop à partir de 992px*//
