--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -15,6 +15,8 @@
     list-style-type: none;
     padding-left: nth($list: $padding, $n: 1);
     margin: nth($list: $margin, $n: 1);
+    display: flex;
+    flex-direction: column;
     
 
     &__link {
@@ -38,7 +40,7 @@
     }
 }
 
-@media all and (min-width: 500px) {
+@media all and (min-width: 768px) {
     .footer {
 
         &__title {
@@ -50,10 +52,30 @@
     .menu-footer {
         padding-left: nth($list: $padding, $n: 1);
         margin: nth($list: $margin, $n: 1);
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-around;
         
 
         &__link {
-            font-size: nth($list: $size, $n: 4);
+            font-size: nth($list: $size, $n: 3);
+            width: nth($list: $width, $n: 2);
+            padding-bottom: nth($list: $padding, $n: 4);
+        }
+    }
+}
+
+@media all and (min-width: 992px) {
+    .footer {
+        &__title {
+            font-size: 26px;
+            text-align: center;
+        }
+    }
+    .menu-footer {
+        &__link {
+            width: initial;
         }
     }
 }
