--- a/css/styles.css
+++ b/css/styles.css
@@ -295,6 +295,110 @@
     animation: prix-tablette 0.7s;
     animation-fill-mode: both;
   }
+  .cards-menu--entree-1 {
+    animation: apparition 2s both;
+    animation-delay: 1s;
+  }
+  .cards-menu--entree-2 {
+    animation: apparition 2s both;
+    animation-delay: 1s;
+  }
+  .cards-menu--entree-3 {
+    animation: apparition 2s both;
+    animation-delay: 2s;
+  }
+  .cards-menu--entree-4 {
+    animation: apparition 2s both;
+    animation-delay: 2s;
+  }
+  .cards-menu--plat-1 {
+    animation: apparition 2s both;
+    animation-delay: 4s;
+  }
+  .cards-menu--plat-2 {
+    animation: apparition 2s both;
+    animation-delay: 4s;
+  }
+  .cards-menu--plat-3 {
+    animation: apparition 2s both;
+    animation-delay: 5s;
+  }
+  .cards-menu--dessert-1 {
+    animation: apparition 2s both;
+    animation-delay: 7s;
+  }
+  .cards-menu--dessert-2 {
+    animation: apparition 2s both;
+    animation-delay: 7s;
+  }
+  .cards-menu--dessert-3 {
+    animation: apparition 2s both;
+    animation-delay: 8s;
+  }
+  .titre-section--entree {
+    animation: apparition 2s both;
+  }
+  .titre-section--plat {
+    animation: apparition 2s both;
+    animation-delay: 3s;
+  }
+  .titre-section--dessert {
+    animation: apparition 2s both;
+    animation-delay: 6s;
+  }
+}
+@media all and (min-width: 992px) {
+  .cards-menu--entree-1 {
+    animation: apparition 2s both;
+    animation-delay: 1s;
+  }
+  .cards-menu--entree-2 {
+    animation: apparition 2s both;
+    animation-delay: 1s;
+  }
+  .cards-menu--entree-3 {
+    animation: apparition 2s both;
+    animation-delay: 1s;
+  }
+  .cards-menu--entree-4 {
+    animation: apparition 2s both;
+    animation-delay: 2s;
+  }
+  .cards-menu--plat-1 {
+    animation: apparition 2s both;
+    animation-delay: 4s;
+  }
+  .cards-menu--plat-2 {
+    animation: apparition 2s both;
+    animation-delay: 4s;
+  }
+  .cards-menu--plat-3 {
+    animation: apparition 2s both;
+    animation-delay: 4s;
+  }
+  .cards-menu--dessert-1 {
+    animation: apparition 2s both;
+    animation-delay: 7s;
+  }
+  .cards-menu--dessert-2 {
+    animation: apparition 2s both;
+    animation-delay: 7s;
+  }
+  .cards-menu--dessert-3 {
+    animation: apparition 2s both;
+    animation-delay: 7s;
+  }
+  .titre-section--entree {
+    animation: apparition 2s both;
+  }
+  .titre-section--plat {
+    animation: apparition 2s both;
+    animation-delay: 3s;
+  }
+  .titre-section--dessert {
+    animation: apparition 2s both;
+    animation-delay: 6s;
+  }
 }
 body {
   margin: 0px;
