--- a/sass/components/_animation.scss
+++ b/sass/components/_animation.scss
@@ -75,5 +75,125 @@
     animation: prix-tablette 0.70s;
     animation-fill-mode: both;
     }
+
+    .cards-menu {
+        &--entree-1 {
+            animation: apparition 2s both;
+            animation-delay: 1s;
+        }
+        &--entree-2 {
+           animation: apparition 2s both;
+           animation-delay: 1s;
+        }
+        &--entree-3 {
+            animation: apparition 2s both;
+            animation-delay: 2s;
+        }
+        &--entree-4 {
+            animation: apparition 2s both;
+            animation-delay: 2s;
+        }
     
+        &--plat-1 {
+            animation: apparition 2s both;
+            animation-delay: 4s;
+        }
+        &--plat-2 {
+            animation: apparition 2s both;
+            animation-delay: 4s;
+        }
+        &--plat-3 {
+            animation: apparition 2s both;
+            animation-delay: 5s;
+        }
+    
+        &--dessert-1 {
+            animation: apparition 2s both;
+            animation-delay: 7s;
+        }
+        &--dessert-2 {
+            animation: apparition 2s both;
+            animation-delay: 7s;
+        }
+        &--dessert-3 {
+            animation: apparition 2s both;
+            animation-delay: 8s;
+        }
+    }
+    
+    .titre-section {
+        &--entree {
+            animation: apparition 2s both;
+        }
+        &--plat {
+            animation: apparition 2s both;
+            animation-delay: 3s;
+        }
+        &--dessert {
+            animation: apparition 2s both;
+            animation-delay: 6s;
+        }
+    }
+    
+}
+
+@media all and (min-width: 992px) {
+    .cards-menu {
+        &--entree-1 {
+            animation: apparition 2s both;
+            animation-delay: 1s;
+        }
+        &--entree-2 {
+           animation: apparition 2s both;
+           animation-delay: 1s;
+        }
+        &--entree-3 {
+            animation: apparition 2s both;
+            animation-delay: 1s;
+        }
+        &--entree-4 {
+            animation: apparition 2s both;
+            animation-delay: 2s;
+        }
+    
+        &--plat-1 {
+            animation: apparition 2s both;
+            animation-delay: 4s;
+        }
+        &--plat-2 {
+            animation: apparition 2s both;
+            animation-delay: 4s;
+        }
+        &--plat-3 {
+            animation: apparition 2s both;
+            animation-delay: 4s;
+        }
+    
+        &--dessert-1 {
+            animation: apparition 2s both;
+            animation-delay: 7s;
+        }
+        &--dessert-2 {
+            animation: apparition 2s both;
+            animation-delay: 7s;
+        }
+        &--dessert-3 {
+            animation: apparition 2s both;
+            animation-delay: 7s;
+        }
+    }
+    
+    .titre-section {
+        &--entree {
+            animation: apparition 2s both;
+        }
+        &--plat {
+            animation: apparition 2s both;
+            animation-delay: 3s;
+        }
+        &--dessert {
+            animation: apparition 2s both;
+            animation-delay: 6s;
+        }
+    }
 }
