--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,15 @@
     visibility: visible;
   }
 }
+@keyframes heart {
+  from {
+    transform: scaley(0);
+  }
+  to {
+    transform: scaley(1);
+    transform-origin: bottom;
+  }
+}
 @keyframes checkbox {
   from {
     transform: rotateY(-100deg);
@@ -585,18 +594,15 @@ a:hover {
   visibility: hidden;
 }
 .border-heart:active + .heart-colorer {
-  transform: scale(1);
   z-index: 3;
   background: linear-gradient(#9356dc, #ff79da);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  animation: heart 300ms both;
 }
 
 .heart-colorer {
   color: white;
-  transform: scaley(0);
-  transition: transform 300ms;
-  transform-origin: bottom;
 }
 .heart-colorer--heart {
   right: 6%;
@@ -662,6 +668,26 @@ a:hover {
   }
   .heart--4 {
     left: 19%;
+  }
+  .border-heart--heart {
+    right: 6%;
+    margin-top: 28px;
+  }
+  .border-heart:hover {
+    visibility: hidden;
+  }
+  .border-heart:hover + .heart-colorer {
+    animation: heart 300ms both;
+    z-index: 3;
+    background: linear-gradient(#9356dc, #ff79da);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+  .heart-colorer {
+    color: white;
+    transform: scaley(0);
+    transition: transform 300ms;
+    transform-origin: bottom;
   }
 }
 .btn-explorez {
